--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@electron-toolkit/preload": "^1.0.3",
     "@electron-toolkit/utils": "^1.0.2",
     "electron-updater": "^5.3.0",
+    "gitmojis": "^3.13.2",
     "sass": "^1.57.1"
   },
   "devDependencies": {
