--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "@electron-toolkit/utils": "^1.0.2",
     "electron-updater": "^5.3.0",
     "gitmojis": "^3.13.2",
-    "sass": "^1.57.1"
+    "sass": "^1.57.1",
+    "tabler-icons-react": "^1.56.0"
   },
   "devDependencies": {
     "@electron-toolkit/tsconfig": "^1.0.1",
