--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@electron-toolkit/utils": "^1.0.2",
     "electron-updater": "^5.3.0",
     "gitmojis": "^3.13.2",
+    "react-router-dom": "^6.6.2",
     "sass": "^1.57.1",
     "tabler-icons-react": "^1.56.0"
   },
