--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "@electron-toolkit/preload": "^1.0.3",
     "@electron-toolkit/utils": "^1.0.2",
+    "canvas-confetti": "^1.6.0",
     "electron-updater": "^5.3.0",
     "gitmojis": "^3.13.2",
     "react-router-dom": "^6.6.2",
@@ -35,6 +36,7 @@
   "devDependencies": {
     "@electron-toolkit/tsconfig": "^1.0.1",
     "@electron/notarize": "^1.2.3",
+    "@types/canvas-confetti": "^1.6.0",
     "@types/node": "16.18.11",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
