--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "gitmoji-desktop",
+  "productName": "Gitmoji",
   "version": "1.0.0",
   "description": "An Electron application with React and TypeScript",
   "main": "./out/main/index.js",
