--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@electron-toolkit/utils": "^1.0.2",
     "canvas-confetti": "^1.6.0",
     "electron-is-dev": "^2.0.0",
+    "electron-traywindow-positioner": "^1.1.1",
     "electron-updater": "^5.3.0",
     "gitmojis": "^3.13.2",
     "react-router-dom": "^6.6.2",
@@ -47,7 +48,7 @@
     "@typescript-eslint/parser": "^5.48.0",
     "@vitejs/plugin-react": "^3.0.1",
     "autoprefixer": "^10.4.13",
-    "electron": "^21.3.3",
+    "electron": "21",
     "electron-builder": "^23.6.0",
     "electron-vite": "^1.0.17",
     "eslint": "^8.31.0",
